updated font and added custom scroll bar

--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 </head>
 <body>
     <main>
-    <h1>morse code translator</h1>
+        <h1>morse code translator</h1>
 
-    <div class="container-container">
-    <div class="container">
-        <h3>TEXT:</h3>
-        <textarea class="text" rows="7" wrap="hard" placeholder="enter your text here"></textarea>
-    </div>
-    
-    <div class="container">
-        <h3>MORSE CODE:</h3>
-        <textarea class="morsecode" rows="7" wrap="hard" placeholder="---... -.--.-"></textarea>
-    </div>
-    </div>
+        <div class="container-container">
+            <div class="container">
+                <h3>TEXT:</h3>
+                <textarea class="text" rows="7" wrap="hard" placeholder="enter your text here"></textarea>
+            </div>
+            
+            <div class="container">
+                <h3>MORSE CODE:</h3>
+                <textarea class="morsecode" rows="7" wrap="hard" placeholder=". -. - . .-. / -.-- --- ..- .-. / - . -..- - / .... . .-. ."></textarea>
+            </div>
+        </div>
 
-    <div class="buttonbox">
-        <button class="clearButton">CLEAR ALL</button>
-    </div>
+        <div class="buttonbox">
+            <button class="clearButton">CLEAR ALL</button>
+        </div>
     </main>
 
 <script src="script.js"></script>
