--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <div class="container-container">
             <div class="container">
                 <h3>TEXT:</h3>
-                <textarea class="text" rows="7" wrap="hard" placeholder="enter your text here"></textarea>
+                <textarea class="text" rows="7" wrap="hard" placeholder="enter text here"></textarea>
             </div>
             
             <div class="container">
                 <h3>MORSE CODE:</h3>
-                <textarea class="morsecode" rows="7" wrap="hard" placeholder=". -. - . .-. / -.-- --- ..- .-. / - . -..- - / .... . .-. ."></textarea>
+                <textarea class="morsecode" rows="5" wrap="hard" placeholder=". -. - . .-. / - . -..- - / .... . .-. ."></textarea>
             </div>
         </div>
 
